syntax = "proto3";

package todo;

import "google/protobuf/timestamp.proto";

service TodoService {
    rpc GetLatest (GetLatestRequest) returns (GetLatestResponse);
}

message GetLatestRequest {}

message GetLatestResponse {
    Todo todo = 1;
}

message Todo {
    google.protobuf.Timestamp timestamp = 1;
    string text = 2;
}
